<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="vehiclePrice">Vehicle Price</string>
    <string name="downPayment">Down Payment</string>
    <string name="interestRate">Interest Rate (%)</string>
    <string name="repayment">Repayment</string>
    <string name="salary">Salary</string>
    <string name="totalInterest">Total Interest</string>
    <string name="totalLoan">Total Loan</string>
    <string name="monthPayment">Month Payment</string>
    <string name="status">Status</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="returnn">Return</string>
</resources>
